--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cypress:open": "cypress open",
-    "lint": "eslint **/*.js --ignore-pattern node_modules"
+    "lint": "eslint **/*.js --ignore-pattern node_modules --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
