--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,12 @@
           "state"
         ]
       }
+    ],
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": "arrow-function"
+      }
     ]
   }
 }
