chore: disable spread props linter rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     "cypress"
   ],
   "rules": {
+    "react/jsx-props-no-spreading": "off",
     "import/prefer-default-export": "warn",
     "no-param-reassign": [
       "error",
