--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "react-inditex-phone-app",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "author": {
     "name": "Sara Hernández Suárez",
-    "email": "sara.her.su@gmail.com"
+    "email": "sara.her.su@gmail.com",
+    "url": "http://github.com/LonelyPrincess"
   },
+  "homepage": "https://lonelyprincess.github.io/react-inditex-phone-app",
+  "repository": "github:LonelyPrincess/react-inditex-phone-app",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
@@ -30,10 +33,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "cypress:ui": "cypress open",
     "cypress:cli": "cypress run",
+    "deploy": "npm run build && gh-pages -d build",
     "lint": "eslint **/*.js --ignore-pattern node_modules --fix"
   },
   "eslintConfig": {
@@ -59,6 +61,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0"
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^3.2.3"
   }
 }
