--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "email": "sara.her.su@gmail.com",
     "url": "http://github.com/LonelyPrincess"
   },
-  "homepage": "https://lonelyprincess.github.io/react-inditex-phone-app",
+  "homepage": "https://LonelyPrincess.github.io/react-inditex-phone-app",
   "repository": "github:LonelyPrincess/react-inditex-phone-app",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
