--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,10 +9,6 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    env:
-      USER_NAME: "Sara Hernández"
-      USER_EMAIL: "sara.her.su@gmail.com"
-
     steps:
 
       - name: Checkout repository
@@ -26,11 +22,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Configure Git user name
-        run: git config user.name ${{ env.USER_NAME }}
+      - name: Build the application bundle
+        run: npm run build
 
-      - name: Configure Git user email
-        run: git config user.email ${{ env.USER_EMAIL }}
-
-      - name: Build the application bundle and deploy to GitHub pages
-        run: npm run deploy
+      - name: Deploy to GitHub pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
